Prueba de logica PHP superada

--- a/index.html
+++ b/index.html
@@ -3,98 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario para Información del Footer</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        .form-section {
-            margin-bottom: 20px;
-        }
-        label {
-            font-weight: bold;
-        }
-        input[type="text"], input[type="email"], textarea {
-            width: 100%;
-            padding: 10px;
-            margin-top: 5px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        textarea {
-            height: 100px;
-        }
-        .submit-btn {
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-    </style>
+    <title>Formulario para Footer - E-commerce Stickers</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <h2>Formulario para Información del Footer - E-commerce de Stickers</h2>
-    <p>Por favor, complete el siguiente formulario con la información necesaria para agregar al footer de su sitio web.</p>
+    <p>Por favor, complete el siguiente formulario con la información necesaria.</p>
 
-    <form id="footerForm">
-        <!-- Sección de Política de Devoluciones -->
+    <form action="procesar_formulario.php" method="POST">
         <div class="form-section">
             <label for="devoluciones">Política de Devoluciones</label>
-            <textarea id="devoluciones" name="devoluciones" placeholder="Describa los plazos y condiciones para devoluciones..."></textarea>
+            <textarea id="devoluciones" name="devoluciones" placeholder="Describa las políticas de devolución..."></textarea>
         </div>
 
-        <!-- Sección de Política de Envíos -->
         <div class="form-section">
             <label for="envios">Política de Envíos</label>
-            <textarea id="envios" name="envios" placeholder="Especifique las zonas de entrega, tiempos estimados y costos de envío..."></textarea>
+            <textarea id="envios" name="envios" placeholder="Política de envíos..."></textarea>
         </div>
 
-        <!-- Sección de Métodos de Pago -->
         <div class="form-section">
             <label for="pagos">Métodos de Pago</label>
-            <textarea id="pagos" name="pagos" placeholder="Indique los métodos de pago aceptados y medidas de seguridad..."></textarea>
+            <textarea id="pagos" name="pagos" placeholder="Métodos de pago aceptados..."></textarea>
         </div>
 
-        <!-- Sección de Términos y Condiciones -->
         <div class="form-section">
-            <label for="tyc">Términos y Condiciones (T&C)</label>
-            <textarea id="tyc" name="tyc" placeholder="Indique los términos y condiciones de uso del sitio..."></textarea>
+            <label for="tyc">Términos y Condiciones</label>
+            <textarea id="tyc" name="tyc" placeholder="Términos y condiciones del sitio..."></textarea>
         </div>
 
-        <!-- Sección de Tratamiento de Datos -->
         <div class="form-section">
             <label for="datos">Política de Tratamiento de Datos</label>
-            <textarea id="datos" name="datos" placeholder="Describa cómo se manejarán los datos personales según la ley 1581 de 2012..."></textarea>
+            <textarea id="datos" name="datos" placeholder="Tratamiento de datos según Ley 1581 de 2012..."></textarea>
         </div>
 
-        <!-- Sección de Contacto -->
         <div class="form-section">
             <label for="contacto">Información de Contacto</label>
-            <input type="text" id="contacto" name="contacto" placeholder="Número de teléfono o correo electrónico para atención al cliente...">
+            <input type="text" id="contacto" name="contacto" placeholder="Correo electrónico o teléfono para atención...">
         </div>
 
-        <!-- Sección de Redes Sociales -->
         <div class="form-section">
             <label for="redes">Redes Sociales</label>
-            <textarea id="redes" name="redes" placeholder="Proporcione los enlaces a las redes sociales de la empresa..."></textarea>
+            <textarea id="redes" name="redes" placeholder="Enlaces a redes sociales..."></textarea>
         </div>
 
-        <!-- Botón para enviar el formulario -->
         <button type="submit" class="submit-btn">Enviar Información</button>
     </form>
 
-    <script>
-        // Aquí podrías añadir un script para convertir el formulario a PDF usando jsPDF
-        document.getElementById('footerForm').addEventListener('submit', function(e) {
-            e.preventDefault();
-            alert('Formulario enviado. ¡Gracias!');
-            // Integrar jsPDF para generar PDF del formulario si es necesario
-        });
-    </script>
 </body>
 </html>
