--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
             <textarea id="redes" name="redes" placeholder="Enlaces a redes sociales..."></textarea>
         </div>
 
+        <div class="form-section">
+            <label for="correo_cliente">Correo Electrónico del Cliente</label>
+            <input type="email" id="correo_cliente" name="correo_cliente" placeholder="Ingrese su correo electrónico..." required>
+        </div>
+
         <button type="submit" class="submit-btn">Enviar Información</button>
     </form>
 
